# Gomoku-Linera-Microchain

./: LICENSE  README.md
backend/: Cargo.toml  localChainCommand.txt
backend/src/: contract.rs  lib.rs  service.rs  state.rs
backend/tests/: gomoku_contract_test.rs  single_chain.rs
frontend/: index.html  linera_client.js  localServer.py  main.js  runLocalServer.bat
frontend/game/: CaroAI.js  game.js
frontend/game/objects/: CaroBoard.js  Cell.js  GridBoard.js
frontend/game/scenes/: Boot.js  GameBoard.js  Preloader.js  SceneBase.js  StartMenu.js
frontend/linera-client/: linera_web.d.ts  linera_web.js  linera_web_bg.wasm.d.ts
