[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.16", default-features = false }
linera-sdk = "0.14.1"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.14.1", features = ["test", "wasmer"] }
linera-base = "0.14.1"
tokio = { version = "1.40", features = ["rt", "sync", "macros"] }

[[bin]]
name = "gomoku_contract"
path = "src/contract.rs"

[[bin]]
name = "gomoku_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
